# lemuri-multi-writer

./: CMakeLists.txt  config.h.cmake
src/: CMakeLists.txt  devicesmodel.cpp  devicesmodel.h  main.cpp  multiwriter.cpp  multiwriter.h  multiwriter.ui  writerthread.cpp  writerthread.h
src/qml/: main.qml
